add a new paragraph

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>this is my first paragraph. </p>
     <h2>My 2nd Heading</h2>
     <div id="output"></div>
+    <p>What a nice web Programming experience</p>
     <script src="main.js"></script>
 
 </body>
